<resources>
    <string name="app_name">مانیتورینگ</string>
    <string name="title_activity_settings">تنظیمات</string>
    <string name="server_address">آدرس سرور</string>
    <string name="http">http://</string>
    <string name="port">پورت</string>
    <string name="_3000">3000</string>
    <string name="_80">80</string>
    <string name="save_settings">ذخیره تنظیمات</string>
    <string name="view_history">مشاهده سوابق</string>
    <string name="param_history">سوابق پارامتر</string>
</resources>
